<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:elevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/prod_img"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/prodimg"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher_background"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/prod_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_iphone"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="12dp"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/prod_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_79_999"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/prod_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_a_product_by_apple"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>